--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
   "prefix": ";",
-  "token": "NjUwOTE4Njk0ODk3MzE5OTU1.XeTpsw.5nul2fL9V_Ppr_GR8xm_WjdCM7Y"
+  "token": "NjgxNDY4NzY4NDg4MzkwNjY4.XlO6kg.M0SqxXq1VmNscnhHX7BqTHT4nmw"
 }
